fixes #18678 (too long captions in panels)
svn changeset:5132/svn branch:trunk

--- a/WebContent/ITMILL/themes/default/panel/panel.css
+++ b/WebContent/ITMILL/themes/default/panel/panel.css
@@ -10,6 +10,9 @@
 	text-align: left /* Force default alignment */
 }
 
+.i-panel {
+	background: transparent url(img/top-left.png) no-repeat;
+}
 .i-panel:before {
 	display: block;
 	content: "";
@@ -41,6 +44,7 @@
 	border: 1px solid #babfc0;
 	border-top: none;
 	background: #fff;
+	overflow:hidden;
 }
 
 .i-panel-nocaption {
@@ -55,7 +59,6 @@
 	position: relative;
 	width: 9px;
 	height: 9px;
-	background: transparent url(img/top-left.png) no-repeat;
 	margin: -15px 0 5px -19px;
 }
 
@@ -93,6 +96,9 @@
 
 /* Light panel style */
 
+.i-panel-light {
+	background: transparent;
+}
 .i-panel-light:before {
 	display: none;
 }
